--- a/qs.html
+++ b/qs.html
@@ -13,7 +13,7 @@
             <div class="item1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione facere totam, impedit soluta quisquam, dolor quaerat saepe molestias illum, nemo voluptatem nesciunt magni cumque qui! Rerum nostrum officiis atque temporibus.</div>
             <div class="item2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam odit reiciendis quasi rem quam cumque modi laboriosam vero nisi perferendis illum vel dignissimos, sequi, animi officiis! Maxime suscipit exercitationem quidem.</div><br><br>
 
-            <center><h3><a href="videos.html">Voltar</a></h3></center>
+            <center><h3><a href="videos.html">Pagina de videos</a></h3></center>
         </section>
     </main>
 </body>
