--- a/videos.html
+++ b/videos.html
@@ -21,6 +21,7 @@
     </main>
     <footer>
      <center><h3><a href="qs.html">Quem somos nós?</a></h3></center>
+     <center><h3><a href="form.html">Logar</a></h3></center>
     </footer>
     
 </body>
